# windows_IP4_DNS_hunting_modizes_the_desktop

./: README.md  WindowsNetworkConfigTool_DevDoc_CN.md  WindowsNetworkConfigTool_DevDoc_EN.md  build-app.bat  index.html  package.json  stats.html  tsconfig.json  vite.config.ts  打包说明.md
src/: App.vue  App2.vue  tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
